Sun Sep 12 19:53:44 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_view.c: (gE_event_key_press) Added shortcuts for Undo and Redo

Sun Sep 12 19:38:45 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* TODO: Done GnomeMDI and Undo

Sun Sep 12 19:30:12 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.c: (gE_undo_redo) Simple case of copying the undo code, and
	  swapping some parts. so that the redo item goes onto the undo stack. the
	  action check is also reversed, so that text deleted is deleted (instead
	  of inserted).. oh the confusion. gEdit now has fully working undo/redo =)

Sun Sep 12 19:22:19 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.c: (gE_undo_add) Nullify the redo stack after freeing it. no
	  more lockup's! yay!

Sun Sep 12 19:03:50 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.c: (gE_undo_do) New function. Gets the last done item, copies
	  the data and puts the item onto the Redo stack. Then it checks whether
	  text had been inserted or deleted. We insert or delete the text as 
	  required.
	  (views_insert) New function, to insert deleted text from an undo (will also
	  work with the redo when its done).
	  (views_delete) New function, to delete inserted text done by an undo (again,
	  will work with redo too).
	  Small glitch, it seems, after an undo, when you type more than 2 characters
	  gEdit will lock up!
	
	* src/gE_undo.h: Removed pointer to the gpointer on the undo_do and redo
	  functions.. (doh!)
	
	* gE_mdi.c: Added Undo and Redo menu items to the Edit menu.

Sun Sep 12 17:28:35 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.c: (gE_undo_add) New fucntion. Add's undo item to the stack.
	
	* src/gE_view.c: (doc_insert_text_cb) (doc_delete_text_cb) Added function
	  call to insert the inserted or deleted text into the undo stack.
	
	* src/Makefile.am: Added gE_undo.[ch] to the source list.
	
Sun Sep 12 16:18:18 BST 1999  Alex Roberts  <bse@gedit.pn.org>
