@@ -1,3 +1,7 @@
+Sun Sep 12 21:17:22 BST 1999  Alex Roberts  <bse@gedit.pn.org>
+
+	* src/toolbar.h: Added Undo and Redo buttons.
+
 Sun Sep 12 19:53:44 BST 1999  Alex Roberts  <bse@gedit.pn.org>
 
 	* src/gE_view.c: (gE_event_key_press) Added shortcuts for Undo and Redo
